fix: action button color for dark mode

--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -52,7 +52,7 @@
   
   .visit-btn {
     padding: .75rem 1.5rem;
-    background: var(--primary-color);
+    background: #4F3A65;
     border-radius: .3rem;
     color: #fff;
     font-size: .9rem;
