--- a/src/templates/single-portfolio.css
+++ b/src/templates/single-portfolio.css
@@ -39,7 +39,7 @@
   align-items: center;
   width: 100%;
   height: 1.8rem;
-  background-color: var(--primary-color);
+  background-color: #4F3A65;
   position: absolute;
   top: 0;
   z-index: 12;
@@ -54,7 +54,7 @@
 
 .visit-btn {
   padding: .75rem 1.5rem;
-  background: var(--primary-color);
+  background: #4F3A65;
   border-radius: .3rem;
   color: #fff;
   font-size: .9rem;
